ya entra a admin, tiene los 3 botones y el boton de users redirecciona a la lista de usuario

--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -30,7 +30,7 @@
         <br></br>       
         <br></br>
         <div class="col-12 text-center">  
-            <p:commandButton class="butn" update="login_form" value="Users" actionListener="#{loginBean.autenticacion()}"/>
+            <p:commandButton class="butn" update="login_form" value="Users" actionListener="#{usuariosBean.entrar()}"/>
             <p:commandButton class="butn" update="login_form" value="Intention" actionListener="#{loginBean.autenticacion()}" />
             <p:commandButton class="butn" update="login_form" value="LogOut" actionListener="#{loginBean.autenticacion()}" />
         </div>
