movimeinto entre xhtmnl, desded admin ya se puede ir a usuarios y a intenciones, ademas de un logout que falta validar para que no funcione al devolver ventana

--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -31,12 +31,12 @@
         <br></br>
         <div class="col-12 text-center">  
             <p:commandButton class="butn" update="login_form" value="Users" actionListener="#{usuariosBean.entrar()}"/>
-            <p:commandButton class="butn" update="login_form" value="Intention" actionListener="#{loginBean.autenticacion()}" />
-            <p:commandButton class="butn" update="login_form" value="LogOut" actionListener="#{loginBean.autenticacion()}" />
+            <p:commandButton class="butn" update="login_form" value="Intention" actionListener="#{intentionBean.entrar()}"/>
+            <p:commandButton class="butn" update="login_form" value="Logout" actionListener="#{loginBean.logout()}"/>
         </div>
         
     </h:form>
     </div>
-</h:body>    
+</h:body>     
 </html>
 
