--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,57 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <style type="text/css">
+            .myButton {
+                -moz-box-shadow: 0px 1px 0px 0px #1c1b18;
+                -webkit-box-shadow: 0px 1px 0px 0px #1c1b18;
+                box-shadow: 0px 1px 0px 0px #1c1b18;
+                background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #eae0c2), color-stop(1, #ccc2a6));
+                background:-moz-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+                background:-webkit-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+                background:-o-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+                background:-ms-linear-gradient(top, #eae0c2 5%, #ccc2a6 100%);
+                background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+                filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eae0c2', endColorstr='#ccc2a6',GradientType=0);
+                background-color:#eae0c2;
+                -moz-border-radius:15px;
+                -webkit-border-radius:15px;
+                border-radius:15px;
+                border:2px solid #333029;
+                display:inline-block;
+                cursor:pointer;
+                color:#505739;
+                font-family:Arial;
+                font-size: 60px;
+                font-weight:bold;
+                padding:12px 16px;
+                text-decoration:none;
+                text-shadow:0px 1px 0px #ffffff;
+                height: 200px;
+                width: 250px;
+        }
+        .myButton:hover {
+                background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ccc2a6), color-stop(1, #eae0c2));
+                background:-moz-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+                background:-webkit-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+                background:-o-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+                background:-ms-linear-gradient(top, #ccc2a6 5%, #eae0c2 100%);
+                background:linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%);
+                filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ccc2a6', endColorstr='#eae0c2',GradientType=0);
+                background-color:#ccc2a6;
+        }
+        .myButton:active {
+                position:relative;
+                top:1px;
+        }
+        </style>
     </head>
-    <body>
-        <h1>Hello World!</h1>
+    <body style="text-align: center; background: radial-gradient(circle, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 53%, rgba(255,0,0,1) 100%);">
+        <div style="margin-top: 5%">
+            <img src="img/logoEci.png" alt="Logo De la Escuela Colombiana de Ingenieria"/>
+            <h1 style="color: #ffffff">Bienvenidos a la Pagina de Iniciativas</h1>
+            <h2 style="color: #ffffff">Presiona el boton para iniciar sesion</h2>           
+            <input type="button" onclick="window.location.href='faces/login.xhtml'" value="Login" class="myButton">         
+        </div>        
     </body>
 </html>
