correccion de detalles
se corrigio el boton de busqueda de intenciones, y se arreglo el estilo de la pagina de registro de intencion

--- a/src/main/webapp/search.xhtml
+++ b/src/main/webapp/search.xhtml
@@ -16,25 +16,24 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <style type="text/css">
-            .buttons {
-                margin: 10px;
-            }
-        </style>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>        
     </h:head>
     <h:body>
         <h:form id="search_form">
-            <h:form class="buttons" id="button_form">
-                <p:commandButton update="button_form" value="List All" actionListener="#{intentionBean.entrar()}"/>
-                <p:commandButton update="button_form" value="Search" actionListener="#{intentionBean.redirectS()}"/>
-                <p:commandButton update="button_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
-            </h:form>
+            <div style="margin: 15px;" id="button_form">
+                <p:commandButton update="search_form" value="List All" actionListener="#{intentionBean.entrar()}"/>
+                <p:commandButton update="search_form" value="Search" actionListener="#{intentionBean.redirectS()}"/>
+                <p:commandButton update="search_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
+            </div>
+            <center>
+                <img style="margin: 0px 200px" src="img/logoEci.png" alt="eciLogo" />
+            </center>
+            <div style="margin: 15px;">
+                <h:outputText value="Search: " style="color: #ffffff"/>
+                <p:inputText value="#{intentionBean.valSearch}"/>
+                <p:commandButton update="search_form" value="Search" style="margin: 10px"/>
+            </div>
             
-            <h:outputText value="Search: " />
-            <p:inputText value="#{intentionBean.valSearch}"/>
-            <p:commandButton update="search_form" value="Search" style="margin: 10px"/>
-            <img style="margin: 0px 200px" src="img/logoEci.png" alt="eciLogo" />
             <div style="margin: 10px"/>
             <p:dataTable id="search_table" var="intention" value="#{intentionBean.finds}" style="margin: 10px">
                 <p:column headerText="Titulo">
