arreglo login con http server 31044550+NicoCardenas@users.noreply.github.com

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -42,7 +42,7 @@
         </div>        
         <br></br>
         <div class="col-12 text-center">
-            <p:commandButton class="btn btn-default" update="login_form" value="Login" actionListener="#{loginBean.autenticacion()}"/>
+            <p:commandButton icon="ui-icon-check" class="btn btn-default" update="login_form" value="Login" actionListener="#{loginBean.autenticacion()}"/>
         </div>        
     </h:form>
     </div>
