--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -26,7 +26,7 @@
     <h:form id="login_form">
         <img src="img/login.png" alt="Log Icon" />
         <br></br>
-        <p:outputLabel value="hola guapo" class="subtitle"/>
+        <p:outputLabel value="Hola Administrador" class="subtitle"/>
         <p:outputLabel value="#{loginBean.usuario.tipoUsuario} - #{loginBean.usuario.full_name} - #{loginBean.usuario.areaDepartment}" style="padding: 0; float: right; margin: 1%; font-size: 50%; margin-top: 0.7%; background-size: cover;" /> 
         <br></br>       
         <br></br>
