añadidos botones de back, se corrigio aprte del logout, ya identifica que usuario esta logueado para saber a que ventana volver

--- a/src/main/webapp/ListaUsuarios.xhtml
+++ b/src/main/webapp/ListaUsuarios.xhtml
@@ -28,6 +28,7 @@
         <h:form class="buttons" id="button_form">
             <p:commandButton update="button_form" value="List All" actionListener="#{usuariosBean.entrar()}"/>
             <p:commandButton update="button_form" value="Search" actionListener="#{usuariosBean.redirectS()}"/>
+            <p:commandButton update="button_form" value="Back" actionListener="#{usuariosBean.salir()}"/>
         </h:form>
                 
         <div class="title">
