--- a/src/main/webapp/intencion.xhtml
+++ b/src/main/webapp/intencion.xhtml
@@ -29,6 +29,7 @@
             <p:commandButton update="button_form" value="List All" actionListener="#{intentionBean.entrar()}"/>
             <p:commandButton update="button_form" value="Search" actionListener="#{intentionBean.redirectS()}"/>
             <p:commandButton update="button_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
+            <p:commandButton update="button_form" value="Back" actionListener="#{intentionBean.salir()}"/>
         </h:form>
                 
         <div class="title">
