arreglado el problema de logout, no permite entrar a una url dentro de la app sin una sesion iniciada

--- a/src/main/webapp/ListaUsuarios.xhtml
+++ b/src/main/webapp/ListaUsuarios.xhtml
@@ -30,7 +30,7 @@
             <p:commandButton update="button_form" value="Search" actionListener="#{usuariosBean.redirectS()}"/>
             <p:commandButton update="button_form" value="Back" actionListener="#{usuariosBean.salir()}"/>
         </h:form>
-                
+        <h:outputText value="Usuario: #{usuariosBean.user.tipoUsuario}"/>        
         <div class="title">
             <img src="img/logoEci.png" alt="eciLogo" />
             <center><h1>Lista de usuarios</h1></center>
