--- a/src/main/webapp/SearchUser.xhtml
+++ b/src/main/webapp/SearchUser.xhtml
@@ -19,7 +19,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>        
     </h:head>
     <h:body>
+        
         <h:form id="search_form">
+            <h:outputText style="display: none" value="Usuario: #{usuariosBean.user.tipoUsuario}"/>  
             <div style="margin: 15px;" id="button_form">
 				<p:commandButton update="search_form" value="List All" actionListener="#{usuariosBean.entrar()}"/>
                 <p:commandButton update="search_form" value="Search" actionListener="#{usuariosBean.redirectS()}"/>
@@ -48,5 +50,6 @@
                     </p:column>       
             </p:dataTable>
         </h:form>
+        
     </h:body>
 </html>
