--- a/src/main/webapp/intencion.xhtml
+++ b/src/main/webapp/intencion.xhtml
@@ -31,7 +31,7 @@
             <p:commandButton update="button_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
             <p:commandButton update="button_form" value="Back" actionListener="#{intentionBean.salir()}"/>
         </h:form>
-                
+        <h:outputText value="Usuario: #{intentionBean.user.tipoUsuario}"/>
         <div class="title">
             <img src="img/logoEci.png" alt="eciLogo" />
             <center><h1>Lista de intenciónes</h1></center>
