--- a/src/main/webapp/intencion.xhtml
+++ b/src/main/webapp/intencion.xhtml
@@ -29,7 +29,7 @@
             <p:commandButton update="button_form" value="List All" actionListener="#{intentionBean.entrar()}"/>
             <p:commandButton update="button_form" value="Search" actionListener="#{intentionBean.redirectS()}"/>
             <p:commandButton update="button_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
-            <p:commandButton update="button_form" value="Back" actionListener="#{intentionBean.salir()}"/>
+            <p:commandButton update="button_form" value="Login Out" actionListener="#{intentionBean.salir()}"/>
         </h:form>
         <h:outputText value="Usuario: #{intentionBean.user.tipoUsuario}"/>
         <div class="title">
