correccion de errores

--- a/src/main/webapp/SearchUser.xhtml
+++ b/src/main/webapp/SearchUser.xhtml
@@ -25,7 +25,7 @@
             <div style="margin: 15px;" id="button_form">
                 <p:commandButton update="search_form" value="List All" actionListener="#{usuariosBean.entrar()}"/>
                 <p:commandButton update="search_form" value="Search" actionListener="#{usuariosBean.redirectS()}"/>
-                <p:commandButton update="button_form" value="Back" actionListener="#{usuariosBean.salir()}"/>
+                <p:commandButton update="search_form" value="Back" actionListener="#{usuariosBean.salir()}"/>
             </div>
             <center>
                 <img style="margin: 0px 200px" src="img/logoEci.png" alt="eciLogo" />
