--- a/src/main/webapp/search.xhtml
+++ b/src/main/webapp/search.xhtml
@@ -25,7 +25,7 @@
                 <p:commandButton update="search_form" value="List All" actionListener="#{intentionBean.entrar()}"/>
                 <p:commandButton update="search_form" value="Search" actionListener="#{intentionBean.redirectS()}"/>
                 <p:commandButton update="search_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
-                <p:commandButton update="button_form" value="Login Out" actionListener="#{intentionBean.salir()}"/>
+                <p:commandButton update="search_form" value="Login Out" actionListener="#{intentionBean.salir()}"/>
             </div>
             <center>
                 <img style="margin: 0px 200px" src="img/logoEci.png" alt="eciLogo" />
