--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="shortcut icon" type="image/png" href="img/logoEci.ico"/>
         <style type="text/css">
             .myButton {
                 -moz-box-shadow: 0px 1px 0px 0px #1c1b18;
