--- a/src/main/webapp/insert.xhtml
+++ b/src/main/webapp/insert.xhtml
@@ -13,6 +13,7 @@ and open the template in the editor.
         <title>Intenciones</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="shortcut icon" type="image/png" href="img/logoEci.ico"/>
         <link rel="stylesheet" href="/css/styleIntention.css" />
         <link rel="stylesheet" href="/css/primeicons.css"/>
         <link rel="stylesheet" href="/css/primeflex.css"/>
