--- a/src/main/webapp/graficas.xhtml
+++ b/src/main/webapp/graficas.xhtml
@@ -13,6 +13,7 @@ and open the template in the editor.
         <title>Graficas</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="shortcut icon" type="image/png" href="img/logoEci.ico"/>
     </h:head>
     <h:body>
         <h1>Grafica</h1>        
