--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -27,7 +27,7 @@
     <h:form id="login_form">
         <img src="img/login.png" alt="Log Icon" />
         <br></br>
-        <p:outputLabel value="Hola Administrador" class="subtitle"/>
+        <p:outputLabel value="Hello administrator" class="subtitle"/>
         
         <h:outputLabel style="display: none" value="#{usuariosBean.user.tipoUsuario}" /> 
         
