--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,8 +52,8 @@
     <body style="text-align: center; background: radial-gradient(circle, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 53%, rgba(255,0,0,1) 100%);">
         <div style="margin-top: 5%">
             <img src="img/logoEci.png" alt="Logo De la Escuela Colombiana de Ingenieria"/>
-            <h1 style="color: #ffffff">Bienvenidos a la Pagina de Iniciativas</h1>
-            <h2 style="color: #ffffff">Presiona el boton para iniciar sesion</h2>           
+            <h1 style="color: #ffffff">Welcome to iniciative bank web page</h1>
+            <h2 style="color: #ffffff">press the button to login</h2>           
             <input type="button" onclick="window.location.href='faces/login.xhtml'" value="Login" class="myButton">         
         </div>        
     </body>
