--- a/src/main/webapp/insert.xhtml
+++ b/src/main/webapp/insert.xhtml
@@ -10,7 +10,7 @@ and open the template in the editor.
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Intenciones</title>
+        <title>Intentions</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="shortcut icon" type="image/png" href="img/logoEci.ico"/>
@@ -26,7 +26,7 @@ and open the template in the editor.
                 <p:commandButton update="Register_form" value="Register" actionListener="#{intentionBean.redirectIn()}"/>
                 <p:commandButton update="Register_form" value="Login Out" actionListener="#{intentionBean.salir()}"/>
             </div>
-            <h:outputText value="Usuario: #{loginBean.usuario.tipoUsuario}"/>
+            <h:outputText value="User type: #{loginBean.usuario.tipoUsuario}"/>
             <div class="p-grid">
 
                 <div class="p-col">
