Arreglo de errores menores

--- a/src/main/webapp/insert.xhtml
+++ b/src/main/webapp/insert.xhtml
@@ -39,7 +39,7 @@ and open the template in the editor.
                         <p:inputText value="#{intentionBean.title}" required="true" style="color: #000"/>                        
                         
                         <h:outputText value="Content: " style="color: #ffffff; margin: 5px; display: block;"/>
-                        <p:inputText value="#{intentionBean.content}" required="true" style="color: #000"/>
+                        <p:inputTextarea value="#{intentionBean.content}" required="true" style="color: #000"/>
                         
                         <div style="">
                             <h:outputLabel for="menu" value="Tags: " style="color: #ffffff; margin: 5px; display: block;"/>
